components/sentry/sentry-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-redis
  namespace: sentry
spec:
  selector:
    app: sentry-redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  type: ClusterIP
