components/sentry/sentry-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-web
  namespace: sentry
spec:
  selector:
    app: sentry-web
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  type: ClusterIP
